--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@ __pycache__/
 # C extensions
 *.so
 
+# Models
+models/
+
+# DS_Store files
+.DS_Store
+
 # Distribution / packaging
 .Python
 build/
@@ -129,3 +135,5 @@ dmypy.json
 .pyre/
 
 .vscode/
+streamlit/.DS_Store
+streamlit/assets/.DS_Store
