--- a/streamlit/requirements.txt
+++ b/streamlit/requirements.txt
@@ -2,6 +2,7 @@ absl-py==2.1.0
 altair==5.2.0
 astunparse==1.6.3
 attrs==23.2.0
+beautifulsoup4==4.12.3
 blinker==1.7.0
 cachetools==5.3.2
 certifi==2024.2.2
@@ -25,6 +26,7 @@ h5py==3.10.0
 huggingface-hub==0.20.3
 idna==3.6
 importlib-metadata==7.0.1
+importlib-resources==6.1.1
 Jinja2==3.1.3
 joblib==1.3.2
 jsonschema==4.21.1
@@ -72,6 +74,7 @@ seaborn==0.13.2
 sentencepiece==0.1.99
 six==1.16.0
 smmap==5.0.1
+soupsieve==2.5
 streamlit==1.31.0
 streamlit-lottie==0.0.5
 streamlit-option-menu==0.3.12
